add_subdirectory(audio-test)
add_subdirectory(doom-fire)
add_subdirectory(fizzlefade)
add_subdirectory(flight)
add_subdirectory(geometry)
add_subdirectory(hardware-test)
add_subdirectory(logo)
add_subdirectory(matrix-test)
add_subdirectory(palette-cycle)
add_subdirectory(palette-swap)
add_subdirectory(particle)
add_subdirectory(platformer)
#add_subdirectory(racer)
add_subdirectory(raycaster)
add_subdirectory(rotozoom)
add_subdirectory(scrolly-tile)
add_subdirectory(serial-debug)
add_subdirectory(shmup)
add_subdirectory(sprite-test)
add_subdirectory(text)
add_subdirectory(tilemap_test)
add_subdirectory(tilt)
add_subdirectory(tunnel)
add_subdirectory(timer-test)
