cmake_minimum_required(VERSION 3.9)
project (examples)
find_package (32BLIT CONFIG REQUIRED PATHS ..)
add_subdirectory(audio-test)
add_subdirectory(audio-wave)
add_subdirectory(doom-fire)
add_subdirectory(fizzlefade)
add_subdirectory(flight)
add_subdirectory(geometry)
add_subdirectory(hardware-test)
add_subdirectory(picosystem-hardware-test)
add_subdirectory(jpeg)
add_subdirectory(logo)
add_subdirectory(matrix-test)
add_subdirectory(metadata-test)
add_subdirectory(mp3)
add_subdirectory(multiplayer)
add_subdirectory(palette-cycle)
add_subdirectory(palette-swap)
add_subdirectory(particle)
add_subdirectory(piano)
add_subdirectory(platformer)
add_subdirectory(profiler-test)
add_subdirectory(raycaster)
add_subdirectory(rotozoom)
add_subdirectory(saves)
add_subdirectory(scrolly-tile)
add_subdirectory(serial-debug)
add_subdirectory(shmup)
add_subdirectory(sprite-test)
add_subdirectory(text)
add_subdirectory(tilemap-test)
add_subdirectory(tilt)
add_subdirectory(timer-test)
add_subdirectory(tunnel)
add_subdirectory(tween-demo)
add_subdirectory(tween-test)
add_subdirectory(voxel)
add_subdirectory(waveform-demo)
